tic-tac-toe page fix

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -191,7 +191,7 @@
                         <div class="tic-tac-gameover__score tic-tac-gameover__score--win">Game over</div>
                         <div class="tic-tac-gameover__score tic-tac-gameover__score--draw">Draw</div>
                         <div class="tic-tac-win">Player<span class="tic-tac-win__player tic-tac-win__player--tic"></span><span class="tic-tac-win__player tic-tac-win__player--tac"></span>wins!</div>
-                        <a class="tic-tac-gameover__button" href="/tic-tac-toe/">Restart</a>
+                        <a class="tic-tac-gameover__button" href="">Restart</a>
                     </div>
                 </div>
             </section>
